<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/border_dialog"
    android:orientation="vertical" >

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="2dp" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:src="@drawable/ic_reset_pass" />

        <TextView
            android:id="@+id/text_title"
            style="@style/TextLarge"
            android:layout_width="0dp"
            
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/reset_pass" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/line_bg" />

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:id="@+id/text_current_pass"
            style="@style/TextSmallCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/current_pass" android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/edit_current_pass"
            style="@style/TextSmallCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
            android:layout_weight="0.6"
            android:inputType="numberPassword"
            android:maxEms="4"
            android:paddingLeft="10dp"
            android:password="true" >

        </EditText>
    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:id="@+id/text_new_pass"
            style="@style/TextSmallCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/new_pass" />

        <EditText
            android:id="@+id/edit_new_pass"
            style="@style/TextSmallCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.6"
            android:inputType="numberPassword"
            android:maxEms="4"
            android:password="true" >

           
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:padding="4dp" >

        <Button
            android:id="@+id/btn_ok"
            style="@style/KeyButtonDialog"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/KeyButtonDialog"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>